--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  padding: 0.6rem 3rem;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +9,27 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 180px;
+}
+
+.navbar__avatar:hover {
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  margin-top: 0.5rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
+}
+
+.avatar {
+  width: 45px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.4rem;
+  transition: box-shadow 0.3s ease;
+}
+
+.avatar:hover {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
 }
