--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,6 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/card";
+@import "components/btn";
 @import "pages/index";
