--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,10 @@
 .card {
-  height: 100px;
-  width: 100px;
+  height: 360px;
   background-color: $light-pink;
   color: $black;
+}
+
+.btn:hover {
+  text-decoration: none !important;
+  // background-color: red;
 }
