--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,15 @@
 // Custom custudyo colors
-$light-grey: #E5E5E5;
+$custodyo-gray: #E5E5E5;
 $light-pink: #ff8ba0;
 $dark-pink: #e41f7b;
 $purple: #86003c;
 $black: #000000;
 
+// Standard colors
+$red: #FD1015;
+$blue: #167FFB;
+$yellow: #FFC65A;
+$orange: #E67E22;
+$green: #1EDD88;
+$gray: #0E0000;
+$light-gray: #F4F4F4;
