--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,8 +19,8 @@
 .dropdown-menu {
   margin-top: 0.5rem;
   border: none;
-  border-radius: 10px;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  box-shadow: 0px 0px 3px $element-border;
 }
 
 .avatar {
