Added image slider with splidejs

--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,12 +1,42 @@
-<h1 class="text-center">Costudy space in <%= @space.location %></h1>
+<h1 class="text-center"><%= @space.title %> (<%= @space.location %>)</h1>
 <div class="row my-5">
-  <div class="col-sm-7">
-    <h2><%= @space.title %></h2>
-    <h5>Location: <%= @space.location %></h5>
+  <div class="col-sm-7 pr-sm-5">
+    <div class="slider">
+      <div id="primary-slider">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="secondary-slider">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <p><%= @space.description %></p>
     <p><%= @space.price %>€ pp/pd</p>
   </div>
-  <div class="col-sm-5">
+  <div class="col-sm-5 pl-sm-3">
     <div class="spaces__map" style="background-image: url('<%= image_path "map.png" %>');"></div>
     <div class="spaces__info info-card">
       <p><strong>Address:</strong> <%= @space.location %></p>
