updated based on pull request feedback

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -15,7 +15,7 @@
 .btn-flat {
   padding: 8px 24px;
   border-radius: 4px;
-  background: $custodyo-gray;
+  background: $costudyo-gray;
   transition: background 0.3s ease;
 }
 
