--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,11 @@
-// Define variables for your color scheme
+// Custom custudyo colors
+$costudyo-gray: #E5E5E5;
+$light-pink: #ff8ba0;
+$dark-pink: #e41f7b;
+$purple: #86003c;
+$black: #000000;
 
-// For example:
+// Standard colors
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
