updated typo to costudyo

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,5 @@
 // Custom custudyo colors
-$custodyo-gray: #E5E5E5;
+$costudyo-gray: #E5E5E5;
 $light-pink: #ff8ba0;
 $dark-pink: #e41f7b;
 $purple: #86003c;
