--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "@splidejs/splide/dist/css/splide.min.css";
+@import "flatpickr/dist/themes/light";
 
 // Your CSS partials
 @import "components/index";
