--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -47,5 +47,11 @@
         <p><strong>Opening hours:</strong> 9:00 - 18:00</p>
       </div>
     </div>
+    <div class="form-wrapper d-flex flex-column justify-content-center" style="width: 500px; margin: 0 auto;">
+      <%= simple_form_for :search, method: "get" do |f| %>
+        <%= f.input :starts_at, as: :string, required: false, label: false, input_html: {class: "datepicker hide"} %>
+        <%= f.button :submit, "Go", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
