--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row">
     <% @spaces.each do |space| %>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
-        <div class="card" style="width: 250px;">
+        <div class="card">
           <img class="card-img-top p-2" src="https://cdn.pixabay.com/photo/2017/03/28/12/11/chairs-2181960_960_720.jpg" alt="dummy-costudyo-image">
           <div class="card-body d-flex flex-column justify-content-between">
             <h4><%= space.title %></h4>
