--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,5 @@
 @import "components/index";
 @import "components/card";
 @import "components/btn";
+@import "components/banner";
 @import "pages/index";
