--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,55 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<div class="viewport-container"></div>
+<div class="viewport-container">
+  <%# banner %>
+  <div class="banner m-3" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);">
+    <div class="container text-center">
+      <h1>Find a CoStudy space in your neighbourhood</h1>
+      <p>Explore now the best study spaces!</p>
+      <%= link_to "Explore", spaces_path, class: "btn btn-flat" %>
+    </div>
+  </div>
+
+  <%# cards %>
+  <div class="container">
+    <h2 class="text-center">Why Costudyo?</h2>
+    <hr class="w-80">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
+      <div class="col py-2">
+        <div class="card h-100">
+          <%# <img src="../../assets/images/icons/undraw_researching_22gp (1).svg" class="card-img-top" alt="..."> %>
+          <img src="undraw_book_lover_mkck.svg" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h3 class="card-title">Simple</h3>
+            <p class="card-text">Easy to use. Book a space in less than 2 minutes!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col py-2">
+        <div class="card h-100">
+          <img src="#" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h3 class="card-title">Focus</h3>
+            <p class="card-text">Enjoy our amazon facilities and just focus & learn.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col py-2">
+        <div class="card h-100">
+          <img src="#" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h3 class="card-title">Fun</h3>
+            <p class="card-text">Studying in group is much more fun!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col py-2">
+        <div class="card h-100">
+          <img src="#" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h3 class="card-title">Affordable</h3>
+            <p class="card-text">Our study places are affordable, starting from €5 per day</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
