--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,8 +15,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
       <div class="col py-2">
         <div class="card h-100">
-          <%# <img src="../../assets/images/icons/undraw_researching_22gp (1).svg" class="card-img-top" alt="..."> %>
-          <img src="undraw_book_lover_mkck.svg" class="card-img-top" alt="...">
+          <img src="/images/undraw_book_lover_mkck.svg" class="card-img-top mx-auto my-3" alt="...">
           <div class="card-body text-center">
             <h3 class="card-title">Simple</h3>
             <p class="card-text">Easy to use. Book a space in less than 2 minutes!</p>
@@ -25,7 +24,7 @@
       </div>
       <div class="col py-2">
         <div class="card h-100">
-          <img src="#" class="card-img-top" alt="...">
+          <img src="/images/undraw_coding_6mjf.svg" class="card-img-top mx-auto my-3" alt="...">
           <div class="card-body text-center">
             <h3 class="card-title">Focus</h3>
             <p class="card-text">Enjoy our amazon facilities and just focus & learn.</p>
@@ -34,7 +33,7 @@
       </div>
       <div class="col py-2">
         <div class="card h-100">
-          <img src="#" class="card-img-top" alt="...">
+          <img src="/images/undraw_having_fun_iais.svg" class="card-img-top mx-auto my-3" alt="...">
           <div class="card-body text-center">
             <h3 class="card-title">Fun</h3>
             <p class="card-text">Studying in group is much more fun!</p>
@@ -43,10 +42,10 @@
       </div>
       <div class="col py-2">
         <div class="card h-100">
-          <img src="#" class="card-img-top" alt="...">
+          <img src="/images/undraw_Savings_re_eq4w (1).svg" class="card-img-top mx-auto my-3" alt="...">
           <div class="card-body text-center">
             <h3 class="card-title">Affordable</h3>
-            <p class="card-text">Our study places are affordable, starting from €5 per day</p>
+            <p class="card-text">Our spaces are affordable, starting at €5/day</p>
           </div>
         </div>
       </div>
