--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
       <div class="col py-2">
         <div class="card h-100">
           <div class="card-body text-center">
-            <img src="/images/undraw_book_lover_mkck.svg" class="card-img-top mx-auto my-3" alt="...">
+            <img id="icon" src="/images/undraw_book_lover_mkck.svg" class="card-img-top mx-auto my-3" alt="...">
             <h3 class="card-title">Simple</h3>
             <p class="card-text">Easy to use. Book a space in less than 2 minutes!</p>
           </div>
@@ -25,7 +25,7 @@
       <div class="col py-2">
         <div class="card h-100">
           <div class="card-body text-center">
-            <img src="/images/undraw_coding_6mjf.svg" class="card-img-top mx-auto my-3" alt="...">
+            <img id="icon" src="/images/undraw_coding_6mjf.svg" class="card-img-top mx-auto my-3" alt="...">
             <h3 class="card-title">Focus</h3>
             <p class="card-text">Enjoy our amazon facilities and just focus & learn.</p>
           </div>
@@ -34,7 +34,7 @@
       <div class="col py-2">
         <div class="card h-100">
           <div class="card-body text-center">
-            <img src="/images/undraw_having_fun_iais.svg" class="card-img-top mx-auto my-3" alt="...">
+            <img id="icon" src="/images/undraw_having_fun_iais.svg" class="card-img-top mx-auto my-3" alt="...">
             <h3 class="card-title">Fun</h3>
             <p class="card-text">Studying in group is much more fun!</p>
           </div>
@@ -43,7 +43,7 @@
       <div class="col py-2">
         <div class="card h-100">
           <div class="card-body text-center">
-            <img src="/images/undraw_Savings_re_eq4w (1).svg" class="card-img-top mx-auto my-3" alt="...">
+            <img id="icon" src="/images/undraw_Savings_re_eq4w (1).svg" class="card-img-top mx-auto my-3" alt="...">
             <h3 class="card-title">Affordable</h3>
             <p class="card-text">Our spaces are affordable, starting at €5/day</p>
           </div>
