--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,8 +1,8 @@
 // Custom custudyo colors
 $costudyo-gray: #e5e5e5;
 $light-pink: #ff8ba0;
-$dark-pink: #e41f7b;
-$purple: #86003c;
+$dark-pink: #f10072;
+$purple: #c2005a;
 $black: #000000;
 
 // Standard colors
