--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -8,7 +8,9 @@
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card">
           <div class="card-body d-flex flex-column justify-content-between align-items-center">
-            <img class="card-img-top p-2" src="https://cdn.pixabay.com/photo/2017/03/28/12/11/chairs-2181960_960_720.jpg" alt="dummy-costudyo-image">
+            <% if space.photos.attached? %>
+              <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
+            <% end %>
             <h4><%= space.title %></h4>
             <p class="card-text"><%= space.description.slice(0..50)... %></p>
             <%= link_to "See details", space_path(space), class: "btn btn-flat" %>
