--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -5,30 +5,22 @@
       <div id="primary-slider">
         <div class="splide__track">
           <ul class="splide__list">
-            <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
-            </li>
-            <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="">
-            </li>
-            <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
-            </li>
+            <% @space.photos.each do |photo| %>
+              <li class="splide__slide">
+                <%= cl_image_tag photo.key %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
       <div id="secondary-slider">
         <div class="splide__track">
           <ul class="splide__list">
+          <% @space.photos.each do |photo| %>
             <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+              <%= cl_image_tag photo.key %>
             </li>
-            <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="">
-            </li>
-            <li class="splide__slide">
-              <img src="https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
-            </li>
+          <% end %>
           </ul>
         </div>
       </div>
