--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,10 @@
 @import "components/card";
 @import "components/btn";
 @import "components/banner";
+@import "components/footer";
 @import "pages/index";
 @import "spaces/index";
+
 
 // Global styles
 @import "global";
