--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,7 @@
         <%= image_tag "avatar-#{user_signed_in? ? 'in' : 'out'}.png", class: "avatar dropdown-toggle", id: "", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="">
           <% if user_signed_in? %>
+            <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
             <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item font-weight-bold" %>
