Did few changes on footer

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Custom custudyo colors
 $costudyo-gray: #e5e5e5;
 $light-pink: #ff8ba0;
-$dark-pink: #f10072;
+$dark-pink: #cc1e66;
 $purple: #c2005a;
 $black: #000000;
 
