--- a/app/views/bookings/confirm.html.erb
+++ b/app/views/bookings/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
   <div class="row justify-content-center">
     <div class="card" id="large-card" style="width: 80vw">
       <div class="card-body text-center">
