--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,9 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <div class="container" style="margin-top: 8rem;">
-      <%= render 'shared/flashes' %>
-      <%= yield %>
-    </div>
+    <%= render 'shared/flashes' %>
+    <div style="width:100%; height:5rem;"></div>
+    <%= yield %>
     <%= render 'shared/footer' %>
   </body>
 </html>
