--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
    <div class="banner-content text-center mb-4">
-    <h1>Study spaces in Munich</h1>
+    <h1 class="mt-5">Study spaces in Munich</h1>
   </div>
 
-  <div class="row">
+  <div class="row mb-5">
     <% @spaces.each do |space| %>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card">
