--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,50 +1,52 @@
-<h1 class="text-center"><%= @space.title %> (<%= @space.location %>)</h1>
-<div class="row my-5">
-  <div class="col-sm-7 pr-sm-5">
-    <div class="slider">
-      <div id="primary-slider">
-        <div class="splide__track">
-          <ul class="splide__list">
+<div class="container">
+  <h1 class="text-center mt-5"><%= @space.title %> (<%= @space.location %>)</h1>
+  <div class="row my-5">
+    <div class="col-sm-7 pr-sm-5">
+      <div class="slider">
+        <div id="primary-slider">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <% @space.photos.each do |photo| %>
+                <li class="splide__slide">
+                  <%= cl_image_tag photo.key %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+        <div id="secondary-slider">
+          <div class="splide__track">
+            <ul class="splide__list">
             <% @space.photos.each do |photo| %>
               <li class="splide__slide">
                 <%= cl_image_tag photo.key %>
               </li>
             <% end %>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
-      <div id="secondary-slider">
-        <div class="splide__track">
-          <ul class="splide__list">
-          <% @space.photos.each do |photo| %>
-            <li class="splide__slide">
-              <%= cl_image_tag photo.key %>
-            </li>
+      <div class="space-description-card mb-4 mb-sm-0">
+        <p><%= @space.description %></p>
+        <p><strong><%= @space.price %>€</strong> per day</p>
+      </div>
+    </div>
+    <div class="col-sm-5 pl-sm-3">
+      <div class="d-flex flex-column space-info-card">
+        <div class="space-info-card__map" style="background-image: url('<%= image_path "map.png" %>');"></div>
+        <div class="space-info-card__details">
+          <p><strong>Address:</strong> <%= @space.location %></p>
+          <p><strong>Phone:</strong> +49 30 2343465</p>
+          <p><strong>Opening hours:</strong> 9:00 - 18:00</p>
+        </div>
+      </div>
+      <div class="datepicker-card">
+        <div class="d-flex flex-column justify-content-center align-items-center" style="width: 400px; margin: 0 auto;">
+          <%= simple_form_for [@space, @booking] do |f| %>
+            <%= f.input :starting_date, as: :string, required: false, label: false, input_html: {class: "datepicker invisible"} %>
+            <%= f.button :submit, "Book", class: "btn btn-flat datepicker-btn", style: 'width:100%' %>
           <% end %>
-          </ul>
         </div>
-      </div>
-    </div>
-    <div class="space-description-card mb-4 mb-sm-0">
-      <p><%= @space.description %></p>
-      <p><strong><%= @space.price %>€</strong> per day</p>
-    </div>
-  </div>
-  <div class="col-sm-5 pl-sm-3">
-    <div class="d-flex flex-column space-info-card">
-      <div class="space-info-card__map" style="background-image: url('<%= image_path "map.png" %>');"></div>
-      <div class="space-info-card__details">
-        <p><strong>Address:</strong> <%= @space.location %></p>
-        <p><strong>Phone:</strong> +49 30 2343465</p>
-        <p><strong>Opening hours:</strong> 9:00 - 18:00</p>
-      </div>
-    </div>
-    <div class="datepicker-card">
-      <div class="d-flex flex-column justify-content-center align-items-center" style="width: 400px; margin: 0 auto;">
-        <%= simple_form_for [@space, @booking] do |f| %>
-          <%= f.input :starting_date, as: :string, required: false, label: false, input_html: {class: "datepicker invisible"} %>
-          <%= f.button :submit, "Book", class: "btn btn-flat datepicker-btn", style: 'width:100%' %>
-        <% end %>
       </div>
     </div>
   </div>
