--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,3 +33,12 @@
 .avatar:hover {
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
 }
+
+.navbar__user-email {
+  font-weight: 600;
+  cursor: default;
+}
+
+.navbar__user-email:hover {
+  background-color: $white;
+}
