--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,8 @@
         <%= image_tag "avatar-#{user_signed_in? ? 'in' : 'out'}.png", class: "avatar dropdown-toggle", id: "", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="">
           <% if user_signed_in? %>
+            <p class="dropdown-item m-0 navbar__user-email"><%= current_user.email %></p>
+            <hr class="dropdown-divider">
             <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
