--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,6 +21,11 @@
   border: none;
   border-radius: 15px;
   box-shadow: 0px 0px 3px $element-border;
+  overflow: hidden;
+}
+
+.dropdown-item:active {
+  background-color: $dark-pink;
 }
 
 .avatar {
