--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,13 @@
   border-radius: 15px;
   box-shadow: 0px 0px 3px $element-border;
   overflow: hidden;
+  display: block;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.dropdown-menu.show {
+  opacity: 1;
 }
 
 .dropdown-item:active {
