--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -1,3 +1,17 @@
 <div class="container mt-5">
-  <h1 class="text-center">Add a new space</h1>
+  <h1 class="mb-3 text-center">Add a new space</h1>
+  <div class="row">
+    <div class="col-md-6 offset-md-3 ">
+      <div class="mb-5">
+        <%= simple_form_for(@space) do |f| %>
+          <%= f.input :title %>
+          <%= f.input :description %>
+          <%= f.input :price %>
+          <%= f.input :location %>
+          <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+          <%= f.submit %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
