--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,7 @@
   <ul>
   <% current_user.owned_spaces.each do |space|%>
     <li>
-      <%= space.title %>
+      <%= link_to space.title, space_path(space) %>
       <%= link_to 'Edit', edit_space_path(space) %>
       <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'} %>
     </li>
@@ -14,7 +14,8 @@
   <% end %>
   </ul>
 
-  <h3>My bookings</h3>
+  <h3>My bookin
+  gs</h3>
   <div class="row">
   <% current_user.bookings.each do |booking| %>
     <div class="col-12 col-md-6 col-lg-3 mb-4">
