--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -14,8 +14,7 @@
   <% end %>
   </ul>
 
-  <h3>My bookin
-  gs</h3>
+  <h3>My bookings</h3>
   <div class="row">
   <% current_user.bookings.each do |booking| %>
     <div class="col-12 col-md-6 col-lg-3 mb-4">
