--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -43,8 +43,8 @@
       <div class="datepicker-card">
         <div class="d-flex flex-column justify-content-center align-items-center" style="width: 400px; margin: 0 auto;">
           <%= simple_form_for [@space, @booking] do |f| %>
-            <%= f.input :starting_date, as: :string, required: false, label: false, input_html: {class: "datepicker invisible"} %>
-            <%= f.button :submit, "Book", class: "btn btn-flat datepicker-btn", style: 'width:100%' %>
+            <%= f.input :starting_date, as: :string, required: false, label: false, input_html: {class: "datepicker"} %>
+            <%= f.button :submit, "Book", class: "btn btn-flat datepicker-btn", style: 'width:100%', disabled: true%>
           <% end %>
         </div>
       </div>
