Change card style

--- a/app/views/bookings/confirm.html.erb
+++ b/app/views/bookings/confirm.html.erb
@@ -1,3 +1,4 @@
+<div class="top-offset"></div>
 <div class="container my-5">
   <div class="row justify-content-center">
     <div class="card" id="large-card" style="width: 80vw">
