--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
 <%# banner %>
-<div class="banner mb-5" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);">
+<div class="banner" >
   <div class="container text-center">
     <h1>Find a CoStudy space in your neighbourhood</h1>
     <p>Explore now the best study spaces!</p>
-    <%= link_to "Explore", spaces_path, class: "btn btn-flat" %>
+    <%= link_to "Explore", spaces_path, class: "btn btn-pink" %>
   </div>
 </div>
 
 <%# cards %>
-<div class="container mb-5">
+<div class="container space-cards">
   <h2 class="text-center">Why Costudyo?</h2>
   <hr class="w-80">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 mt-5">
