--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,3 +1,4 @@
+<div class="top-offset"></div>
 <div class="container">
   <h1 class="text-center mt-5"><%= @space.title %> (<%= @space.location %>)</h1>
   <div class="row my-5">
