--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -7,8 +7,13 @@ h2 {
 }
 
 .main-wrapper {
-  min-height: calc(100vh - 5rem);
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.top-offset {
+  width: 100%;
+  height: 5rem;
 }
