--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -37,3 +37,19 @@
   background: linear-gradient(#147eff, #0f67da);
   color: white;
 }
+
+.btn-pink {
+  color: $white;
+  background-color: $dark-pink;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin-top: 1rem;
+  border-radius: 30px;
+  padding: 0.5rem 1.5rem;
+}
+
+.btn-pink:hover {
+  background-color: $purple;
+  color: $white;
+}
