--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,17 @@
 .card {
   height: 380px;
   width: 250px;
-  background-color: $white;
-  border: 1px solid $light-pink;
-  border-radius: 10px;
+  background-color: #fff9fc;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px $element-border;
   color: $black;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.card:hover {
+  transform: scale(1.02);
 }
 
 #my-bookings-card {
@@ -17,7 +24,7 @@
 
 #icon {
   width: 60%;
-} 
+}
 
 #large-card {
   height: auto;
