--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,3 +1,4 @@
+<div class="top-offset"></div>
 <div class="container">
    <div class="banner-content text-center mb-4">
     <h1 class="mt-5">Study spaces around the world</h1>
