--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,8 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
+  height: 200px;
+  padding-top: 40px;
+  padding-bottom: 10px;
   color: $white;
 }
 .footer-links {
