--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,25 +1,40 @@
 <div class="container dashboard my-5">
   <h1>Dashboard</h1>
 
+  <%# <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul> %>
+
   <h3>My spaces</h3>
   <%= link_to 'Add new space', new_space_path %>
   <div class="row">
-  <% current_user.owned_spaces.each do |space|%>
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
-      <div class="card" id="my-bookings-card">
-        <div class="card-body d-flex flex-column justify-content-between align-items-center">
-          <% if space.photos.attached? %>
-            <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
-          <% end %>
-          <p><strong><%= link_to space.title, space_path(space) %></strong></p>
-          <p>Price: €<%= space.price %> per day</p>
-          <%= link_to 'Edit', edit_space_path(space) %>
-          <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'} , class: "btn btn-flat", id: "button-warning"  %>
+    <% current_user.owned_spaces.each do |space|%>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <div class="card" id="my-bookings-card">
+          <div class="card-body d-flex flex-column justify-content-between align-items-center">
+            <% if space.photos.attached? %>
+              <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
+            <% end %>
+            <p><strong><%= link_to space.title, space_path(space) %></strong></p>
+            <p>Price: €<%= space.price %> per day</p>
+            <%= link_to 'Edit space', edit_space_path(space), class: "btn btn-flat m-2" %>
+            <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'} , class: "btn btn-flat", id: "button-warning"  %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
 
   <h3>My bookings</h3>
   <div class="row">
