--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,20 +1,6 @@
 <div class="container dashboard my-5">
-  <h1>Dashboard</h1>
-
-  <%# <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul> %>
+  <h1 class="text-center">Dashboard</h1>
+  <hr class="w-80">
 
   <h3>My spaces</h3>
   <%= link_to 'Add new space', new_space_path %>
@@ -28,7 +14,7 @@
             <% end %>
             <p><strong><%= link_to space.title, space_path(space) %></strong></p>
             <p>Price: €<%= space.price %> per day</p>
-            <%= link_to 'Edit space', edit_space_path(space), class: "btn btn-flat m-2" %>
+            <%# <%= link_to 'Edit space', edit_space_path(space), class: "btn btn-flat m-2" %>
             <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'} , class: "btn btn-flat", id: "button-warning"  %>
           </div>
         </div>
