--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -7,12 +7,12 @@
   <div class="row mb-5">
     <% @spaces.each do |space| %>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
-        <div class="card">
+        <div class="card p-2">
           <div class="card-body d-flex flex-column justify-content-between align-items-center">
             <% if space.photos.attached? %>
-              <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
+              <%= cl_image_tag space.photos[0].key, class: 'card-img-top' %>
             <% end %>
-            <h4><%= space.title %></h4>
+            <h4 class="mt-3"><%= space.title %></h4>
             <p class="text-muted"><i class="fas fa-map-marker-alt mr-1"></i><%= space.location %></p>
             <p class="card-text">
               <% if space.description.size > 40 %>
