Dashboard looking okayish

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -17,3 +17,14 @@ h2 {
   width: 100%;
   height: 5rem;
 }
+
+.dashboard-container {
+  position: relative;
+}
+
+.topright {
+  position: absolute;
+  top: -24px;
+  right: 8px;
+  // font-size: 18px;
+}
