--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -9,9 +9,8 @@
   background: rgb(220, 220, 220);
 }
 
-#button-warning {
-  color: white;
-  background-color: #f15c5cb6;
+#delete-text {
+  color: lightgrey;
 }
 
 .btn-pink {
