--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,11 +1,12 @@
 <div class="top-offset"></div>
 <div class="container dashboard my-5">
-  <h1 class="text-center">Dashboard</h1>
+  <h1 class="text-center">Personal dashboard</h1>
   <hr class="w-80">
 
+  <div class="dashboard-container">
   <h3>My spaces</h3>
-  <%= link_to 'Add new space', new_space_path %>
-  <div class="row dashboard-container">
+  <%= link_to 'New space', new_space_path, class: "btn-pink topright"%>
+  <div class="row">
     <% current_user.owned_spaces.each do |space|%>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card" id="my-bookings-card">
@@ -13,12 +14,13 @@
             <% if space.photos.attached? %>
               <%= cl_image_tag space.photos[0].key, class: 'card-img-top p-2' %>
             <% end %>
-            <p><strong><%= link_to space.title, space_path(space) %></strong></p>
+            <p><strong><%=space.title %></strong></p>
             <p>Price: €<%= space.price %> per day</p>
             <p>This space has <%= space.bookings.count() %> bookings</p>
 
             <%# <%= link_to 'Edit space', edit_space_path(space), class: "btn btn-flat m-2" %>
-            <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'} , class: "btn btn-flat", id: "button-warning"  %>
+            <%= link_to "Details", space_path(space), class: "btn-pink m-2" %>
+            <%= link_to 'Delete', space_path(space), method: :delete, data: {confirm: 'Are you sure?'}, id: "delete-text" %>
           </div>
         </div>
       </div>
@@ -37,12 +39,14 @@
           <p><strong><%= booking.space.title %></strong></p>
           <p>You paid: €<%= booking.space.price %> per day</p>
           <p>You booked for <%= (booking.ending_date - booking.starting_date).to_i %> days</p>
-          <%= link_to "See confirmation", booking_confirmation_path(booking), class: "btn btn-flat m-2" %>
-          <%= link_to 'Delete booking', booking_path(booking), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-flat", id: "button-warning"  %>
+          <%= link_to "Details", booking_confirmation_path(booking), class: "btn-pink m-2" %>
+          <%= link_to 'Delete', booking_path(booking), method: :delete, data: {confirm: 'Are you sure?'}, id: "delete-text"  %>
         </div>
       </div>
     </div>
   <% end %>
   </div>
+
+    </div>
 </div>
 
