--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -7,7 +7,7 @@
   <div class="row mb-5">
     <% @spaces.each do |space| %>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
-        <div class="card p-2">
+        <div class="card p-2 mb-3">
           <div class="card-body d-flex flex-column justify-content-between align-items-center">
             <% if space.photos.attached? %>
               <%= cl_image_tag space.photos[0].key, class: 'card-img-top' %>
