--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
       <div class="card h-100">
         <div class="card-body text-center">
           <img id="icon" src="/images/undraw_book_lover_mkck.svg" class="card-img-top mx-auto my-3" alt="...">
-          <h3 class="card-title">Simplfe</h3>
+          <h3 class="card-title">Simple</h3>
           <p class="card-text">Easy to use. Book a space in less than 2 minutes!</p>
         </div>
       </div>
