--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -7,15 +7,11 @@ h2 {
 }
 
 .main-wrapper {
-  min-height: 100vh;
+  margin-top: 5rem;
+  min-height: calc(100vh - 5rem);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.top-offset {
-  width: 100%;
-  height: 5rem;
 }
 
 .dashboard-container {
@@ -26,5 +22,4 @@ h2 {
   position: absolute;
   top: -24px;
   right: 8px;
-  // font-size: 18px;
 }
