--- a/app/views/bookings/confirm.html.erb
+++ b/app/views/bookings/confirm.html.erb
@@ -1,4 +1,3 @@
-<div class="top-offset"></div>
 <div class="container my-5">
   <div class="row justify-content-center">
     <div class="card" id="large-card" style="width: 80vw">
@@ -6,7 +5,7 @@
         <h3 class=" my-4">Thank you for your booking <b><%= @booking.user.email %></b>!</h3>
         <img class="card-img-top p-2" src="https://cdn.pixabay.com/photo/2017/03/28/12/11/chairs-2181960_960_720.jpg" alt="dummy-costudyo-image" style="width:60%;" >
         <p>Your booking is confirmed. You paid €<%=@booking.space.price%> per day to book <b><%= @booking.space.title %></b> from <%= @booking.starting_date.strftime('%a %d %b %Y') %> until <%= @booking.ending_date.strftime('%a %d %b %Y') %></p>
-        <%= link_to "Go back to all spaces", spaces_path %>
+        <%= link_to "Go to my bookings", dashboard_path(tab: 2) %>
       </div>
     </div>
   </div>
