--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,16 +1,15 @@
-<div class="top-offset"></div>
 <div class="container dashboard my-5">
   <h1 class="text-center">Personal dashboard</h1>
-  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  <ul class="nav nav-pills" id="pills-tab" data-tab="<%= @tab %>" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link active dashboard-nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">My places</a>
+      <a class="nav-link active dashboard-nav-link" id="pills-my-spaces-tab" data-toggle="pill" href="#pills-my-spaces" role="tab" aria-controls="pills-my-spaces" aria-selected="true">My spaces</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link dashboard-nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">My bookings</a>
+      <a class="nav-link dashboard-nav-link" id="pills-my-bookings-tab" data-toggle="pill" href="#pills-my-bookings" role="tab" aria-controls="pills-my-bookings" aria-selected="false">My bookings</a>
     </li>
   </ul>
   <div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+    <div class="tab-pane fade show active" id="pills-my-spaces" role="tabpanel" aria-labelledby="pills-my-spaces-tab">
       <div class="dashboard-container">
         <h3 class="mt-5 mb-3">My spaces</h3>
         <%= link_to 'New space', new_space_path, class: "btn-pink topright"%>
@@ -34,8 +33,8 @@
         </div>
       </div>
     </div>
-    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">.
-      <h3 class="mb-3">My bookings</h3>
+    <div class="tab-pane fade" id="pills-my-bookings" role="tabpanel" aria-labelledby="pills-my-bookings-tab">.
+      <h3 class="mt-4 mb-3">My bookings</h3>
       <div class="row">
       <% current_user.bookings.each do |booking| %>
         <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -56,6 +55,4 @@
       </div>
     </div>
   </div>
-
-
 </div>
